--- a/index.html
+++ b/index.html
@@ -122,21 +122,41 @@
 <!-- 3 divs de qualité -->
 <section class="divProSuivi">
     <div>
-        <i class="fa-solid fa-user-tie"></i>
-        <h3>LOREMPZ</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, eius!</p>
+        <i class="fa-solid fa-person-circle-check"></i>
+        <h3>Formateurs Qualifiés</h3>
+        <p style="text-align: center; ">Les formateurs de cette formation sont des experts chevronnés dans leur domaine, apportant une richesse d'expérience pratique et des compétences pédagogiques avancées</p>
     </div>
     <div>
-        <i class="fa-solid fa-user-tie"></i>
-        <h3>LOREMPZ</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, eius!</p>
+        <i class="fa-solid fa-circle-check"></i>
+        <h3>Approche Pratique</h3>
+        <p style="text-align: center; ">Une formation axée sur la pratique, mettant l'accent sur des exercices concrets, des études de cas réels et des projets pratiques, offrant aux participants la possibilité d'appliquer directement leurs compétences en situation professionnelle.</p>
     </div>
     <div>
-        <i class="fa-solid fa-user-tie"></i>
-        <h3>LOREMPZ</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, eius!</p>
+        <i class="fa-solid fa-star"></i>
+        <h3>Expertise approfondie</h3>
+        <p style="text-align: center; ">La qualité professionnelle de cette formation réside dans son engagement à fournir une expertise approfondie, permettant aux apprenants de maîtriser les subtilités de la gestion logistique moderne.</p>
     </div>
 </section>
+
+<!-- 3 divs galery -->
+<div class="galleryDiv">
+    <i class="fa-regular fa-images"></i>
+    <div class="divTipgallery">
+        <div class="titlegalry">
+            <img src="titlebg.13d788348b56c629eefb2e7ad1f4d6ce.svg" alt="">
+            <h2>Galerie GALERIE</h2>
+        </div>
+        <h1>Notre Galerie De Travail</h1>
+        <p>Notre Workplace Gallery présente des bureaux modernes, une collaboration en équipe et une culture amusante.</p>
+    </div>
+    <div class="galerie">
+        <div alt="1" class="item item1" style="background-color: rgb(16, 202, 140);"></div>
+        <div  alt="2" class="item item2" style="background-color: aquamarine;"></div>
+        <div alt="3" class="item item3" style="background-color: rgb(98, 64, 32);"></div>
+        <div alt="4" class="item item4" style="background-color: rgb(255, 195, 127);"></div>
+        <div  alt="5" class="item item5" style="background-color: rgb(127, 138, 255);"></div>
+    </div>
+</div>
 
 <!-- section3 Articels-->
 <section class="sectionArticles">
@@ -163,13 +183,13 @@
             </div>
         </div>
         <div class="article">
-            <img src="download.jpg" alt="image 1">
+            <img src="tendances-logistique-2022.jpg" alt="image 1">
             <div class="articledatediscription">
                 <div class="dateAndtitlearticl">
-                    <h3>Article 1</h3>
+                    <h3>La Logistique 4.0 : Un Aperçu des Nouvelles Frontières de l'Industrie</h3>
                     <p class="date">08.12.2023</p>
                 </div>
-                <p class="description">Lorem,Sa Exceptus? Eveniet ratione, tatem.</p>
+                <p class="description">L'industrie de la logistique évolue à un rythme effréné, propulsée par des avancées technologiques et des innovations sans précédent</p>
             </div>
         </div>
     </div>
