--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
 <!-- 3 divs galery -->
 <div class="galleryDiv">
-    <i class="fa-regular fa-images"></i>
+    <!-- <i class="fa-regular fa-images"></i> -->
     <div class="divTipgallery">
         <div class="titlegalry">
             <img src="titlebg.13d788348b56c629eefb2e7ad1f4d6ce.svg" alt="">
