--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@
 <!-- have a question div -->
 <section class="havequesitonsection">
     <div>
-        <h2>u have a question ?</h2>
-        <h3> <span>Call:</span> 08 08 8998 09</h3>
+        <h2>Tu as une question ?</h2>
+        <h3> <span>APPELER:</span> 08 08 8998 09</h3>
         <button>PURCHASE NOW</button>
     </div>
 </section>
