--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
     <div class="Socialss2">
         <h3>Share</h3>
         <div class="line"></div>
-        <i class="fa-brands fa-linkedin-in"></i>
-        <i class="fa-brands fa-facebook"></i>
-        <i class="fa-brands fa-instagram"></i>
+        <i style="cursor: pointer;" class="fa-brands fa-linkedin-in"></i>
+        <i style="cursor: pointer;" class="fa-brands fa-facebook"></i>
+        <i style="cursor: pointer;" class="fa-brands fa-instagram"></i>
     </div>
 </section>
 
@@ -157,6 +157,24 @@
         <div  alt="5" class="item item5" style="background-color: rgb(127, 138, 255);"></div>
     </div>
 </div>
+
+<!-- review -->
+<section class="reviewsSec">
+    <div class="containerReview">
+        <div class="smallContainerReview">
+            <div class="reviewDiv">
+                    <!-- <img src="femmecasiste.webp" alt=""> -->
+            </div>    
+            <div class="ReviewInfo">
+                    <img src="iOfreview.png" alt="">
+                    <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit."Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus, ea?</p>
+                    <h3>mr Ahmed Sami - CasaBlanca</h3>
+                    <p>Client</p>
+            </div>
+        </div>
+
+    </div>    
+</section>
 
 <!-- section3 Articels-->
 <section class="sectionArticles">
