--- a/index.html
+++ b/index.html
@@ -93,8 +93,10 @@
     </div>
     <div class="writFirstDiv">
         <div class="GCP">
-            <img src="titlebg.13d788348b56c629eefb2e7ad1f4d6ce.svg" alt="">
-            <h2>Genius Center Prive</h2>
+            <div class="GCP-Title">
+                <img src="titlebg.13d788348b56c629eefb2e7ad1f4d6ce.svg" alt="">
+                <h2>Genius Center Prive</h2>
+            </div>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit, aspernatur.</p>
             <button style=" background-color: #d5d5d5">OUR CLASSES</button>
         </div>
@@ -168,7 +170,7 @@
             <div class="ReviewInfo">
                     <img src="iOfreview.png" alt="">
                     <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit."Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus, ea?</p>
-                    <h3>mr Ahmed Sami - CasaBlanca</h3>
+                    <h3>MR Ahmed Sami - CasaBlanca</h3>
                     <p>Client</p>
             </div>
         </div>
