review styling section

--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
 <div class="galleryDiv">
     <i class="fa-regular fa-images"></i>
     <div class="divTipgallery">
-        <div class="titlegalry">
-            <img src="titlebg.13d788348b56c629eefb2e7ad1f4d6ce.svg" alt="">
-            <h2>Galerie GALERIE</h2>
+        <div class="titlegalry galry">
+            <img src="SPLASH-01.png" alt="">
+            <h2 style="color: aliceblue;">Galerie GALERIE</h2>
         </div>
         <h1>Notre Galerie De Travail</h1>
         <p>Notre Workplace Gallery présente des bureaux modernes, une collaboration en équipe et une culture amusante.</p>
@@ -162,6 +162,11 @@
 
 <!-- review -->
 <section class="reviewsSec">
+    <i class="fa-regular fa-star iOfreview"></i>
+    <div class="titlegalry">
+        <img src="SPLASH-01.png" alt="">
+        <h2 style="color: aliceblue;">TÉMOIGNAGES</h2>
+    </div>
     <div class="containerReview">
         <div class="smallContainerReview">
             <div class="reviewDiv">
@@ -169,9 +174,10 @@
             </div>    
             <div class="ReviewInfo">
                     <img src="iOfreview.png" alt="">
-                    <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit."Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus, ea?</p>
+                    <p style="font-style: italic;">"La formation logistique a dépassé toutes mes attentes ! Les instructeurs étaient extrêmement compétents et engageants. J'ai acquis des compétences précieuses qui ont déjà eu un impact positif sur ma carrière. Je recommande vivement cette formation à tous ceux qui souhaitent exceller dans le domaine de la logistique , Merci le groupe GCP ."</p>
                     <h3>MR Ahmed Sami - CasaBlanca</h3>
                     <p>Client</p>
+                    <i class="fa-regular fa-star iOfreview2"></i>
             </div>
         </div>
 
@@ -180,7 +186,10 @@
 
 <!-- section3 Articels-->
 <section class="sectionArticles">
-    <h2>Articles</h2>
+    <div class="titlegalry articl">
+        <img src="SPLASH-01.png" alt="">
+        <h2 style="color: aliceblue; text-align: center;">Articles</h2>
+    </div>
     <div class="articles">
         <div class="article">
             <img src="femmecasiste.webp" alt="image 1">
