--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <i id="OpenMark" class="fa-solid fa-bars resbar"></i>
         </div>
         <i onclick="afficherPorf()" class="fa-regular fa-chart-bar"></i>
-        <i class="fa-solid fa-moon" style="color: #ffffff;"></i>
+        <!-- <i class="fa-solid fa-moon" style="color: #ffffff;"></i> -->
     </div>
 </header>
 
@@ -188,7 +188,7 @@
 <section class="sectionArticles">
     <div class="titlegalry articl">
         <img src="SPLASH-01.png" alt="">
-        <h2 style="color: aliceblue; text-align: center;">Articles</h2>
+        <h2 style="color: aliceblue">Articles</h2>
     </div>
     <div class="articles">
         <div class="article">
