--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <a href="#">Home</a>
                     <a href="#">About</a>
                     <a href="#">Services</a>
-                    <a href="#">Contact</a>
+                    <a href="#contactSec">Contact</a>
                 </li>
              </ul>
         </div>
@@ -72,7 +72,7 @@
         <a href="#">Home</a>
         <a href="#">About</a>
         <a href="#">Services</a>
-        <a href="#">Contact</a>
+        <a href="#contactSec">Contact</a>
     </nav>
     
     <div class="divPortDrkHeader social">
@@ -248,7 +248,7 @@
 
 
 <!-- have a question div -->
-<section class="havequesitonsection">
+<section class="havequesitonsection" id="contactSec">
     <div>
         <h2>Tu as une question ?</h2>
         <h3> <span>APPELER:</span> 08 08 8998 09</h3>
