--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@
 
 <!-- section Home 1 -->
 <section class="HomeFirstSection" style="background-color: #192664;">
-    <div class="serceles">
+    <div class="serceles hidden">
         <div class="cercle1">
             <div class="cercle2"></div>
         </div>
     </div>
     <div class="writFirstDiv">
-        <div class="GCP">
+        <div class="GCP hidden">
             <div class="GCP-Title">
                 <img src="titlebg.13d788348b56c629eefb2e7ad1f4d6ce.svg" alt="">
                 <h2>Genius Center Prive</h2>
@@ -113,7 +113,7 @@
 
 <!-- Un métier, un article -->
 <section class="metierArticle">
-    <div class="svgsec">
+    <div class="svgsec hidden">
        <h2> 
           <svg>
         <path d="M3.16 27.294l.177.007 11.628.809c1.717.119 3.01 1.632 2.89 3.378-.122 1.747-1.613 3.066-3.33 2.946l-11.628-.808c-1.717-.12-3.01-1.632-2.89-3.379.122-1.746 1.613-3.065 3.33-2.946zm-2-21.9a3.08 3.08 0 014.39-.409l14.856 12.581a3.208 3.208 0 01.401 4.465 3.08 3.08 0 01-4.39.408L1.562 9.858a3.208 3.208 0 01-.4-4.465zM23.997.173c1.626-.563 3.41.322 3.982 1.976l3.636 10.502c.573 1.654-.28 3.452-1.907 4.015-1.627.563-3.41-.321-3.983-1.975L22.09 4.19c-.573-1.655.281-3.452 1.908-4.016z" fill="currentColor"></path>
@@ -122,7 +122,7 @@
 </section>
 
 <!-- 3 divs de qualité -->
-<section class="divProSuivi">
+<section class="divProSuivi hidden">
     <div>
         <i class="fa-solid fa-person-circle-check"></i>
         <h3>Formateurs Qualifiés</h3>
@@ -141,7 +141,7 @@
 </section>
 
 <!-- 3 divs galery -->
-<div class="galleryDiv">
+<div class="galleryDiv hidden">
     <i class="fa-regular fa-images"></i>
     <div class="divTipgallery">
         <div class="titlegalry galry">
@@ -161,7 +161,7 @@
 </div>
 
 <!-- review -->
-<section class="reviewsSec">
+<section class="reviewsSec hidden">
     <i class="fa-regular fa-star iOfreview"></i>
     <div class="titlegalry">
         <img src="SPLASH-01.png" alt="">
@@ -185,7 +185,7 @@
 </section>
 
 <!-- section3 Articels-->
-<section class="sectionArticles">
+<section class="sectionArticles hidden">
     <div class="titlegalry articl">
         <img src="SPLASH-01.png" alt="">
         <h2 style="color: aliceblue">Articles</h2>
@@ -224,7 +224,7 @@
     </div>
 </section>
 
-<section class="MapsSection">
+<section class="MapsSection hidden">
     <div>
         <h2 style="color: #192664;"><i class="fa-solid fa-location-dot"></i>Nous sommes situés dans</h2>
     </div>
@@ -248,7 +248,7 @@
 
 
 <!-- have a question div -->
-<section class="havequesitonsection" id="contactSec">
+<section class="havequesitonsection hidden" id="contactSec">
     <div>
         <h2>Tu as une question ?</h2>
         <h3> <span>APPELER:</span> 08 08 8998 09</h3>
@@ -257,7 +257,7 @@
 </section>
 <!-- footer -->
 <footer>
-    <div class="Contentfooter">
+    <div class="Contentfooter hidden">
         <div class="smallContent">
             <img src="logon.png">
             <p>"Les CACES sont les ailes qui élèvent la logistique, nous permettant de voler au-dessus des obstacles pour atteindre nos objectifs avec agilité."</p>
