--- a/index.html
+++ b/index.html
@@ -249,7 +249,9 @@
 
 <!-- have a question div -->
 <section class="havequesitonsection hidden" id="contactSec">
-    <div>
+    <div class="layer">
+    </div>
+    <div class="Q-text">
         <h2>Tu as une question ?</h2>
         <h3> <span>APPELER:</span> 08 08 8998 09</h3>
         <button>PURCHASE NOW</button>
