--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
              </div>
              <div class="AbotAnddivL">
                  <h3>About Us</h3>
-                 <p style="font-size: 1rem;">Lorem,Lorem ipsum, dolor sit amet consectetur adipisicing elit. At, esse. ipsum dolor sit amet consectetur adipisicing elit. Error, quis.</p>
+                 <p style="font-size: 1rem;">Notre société est un leader en formation logistique, offrant des programmes personnalisés pour optimiser les opérations supply chain. Nous allions expertise sectorielle et pédagogie innovante pour développer les compétences nécessaires à une gestion logistique efficace et performante</p>
              </div>
              <div class="AbotAnddivLImags">
                  <h3>Gelary</h3>
@@ -37,8 +37,8 @@
              </div>
              <div class="AbotAnddivLInfos">
                 <h3>Information</h3>
-                <p style="font-size: 1rem;"><i class="fa-solid fa-location-dot"></i>Drissia, Tanger Tariq</p>
-                <p style="font-size: 1rem;"><i class="fa-solid fa-phone"></i>0808 00 00 00</p>
+                <p style="font-size: 1rem;"><i class="fa-solid fa-location-dot"></i>Drissia Av Tariq Ibn Ziaden , Tanger</p>
+                <p style="font-size: 1rem;"><i class="fa-solid fa-phone"></i>08 08 6435 73</p>
                 <p style="font-size: 1rem;"><i class="fa-solid fa-envelope"></i>geniuscenter@gmail.com</p>
             </div>
             <div class="AbotAnddivLInfos social">
@@ -97,8 +97,8 @@
                 <img src="titlebg.13d788348b56c629eefb2e7ad1f4d6ce.svg" alt="">
                 <h2>Genius Center Prive</h2>
             </div>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit, aspernatur.</p>
-            <button style=" background-color: #d5d5d5">OUR CLASSES</button>
+            <p>façonnons votre expertise pour relever les défis logistiques du futur avec confiance et succès.</p>
+            <button style=" background-color: #d5d5d5">NOS CLASSES</button>
         </div>
     </div>
 <!-- share bar social on first section -->
@@ -253,7 +253,7 @@
     </div>
     <div class="Q-text">
         <h2>Tu as une question ?</h2>
-        <h3> <span>APPELER:</span> 08 08 8998 09</h3>
+        <h3> <span>APPELER:</span> 08 08 6435 73</h3>
         <button>PURCHASE NOW</button>
     </div>
 </section>
