--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </div> 
 <!-- header -->
 <header >
-    <img src="logon.png" alt="Your Logo">
+    <img src="nvlogoblanc.png" alt="Your Logo">
     <nav>
         <a href="#">Home</a>
         <a href="#">About</a>
@@ -85,7 +85,7 @@
 </header>
 
 <!-- section Home 1 -->
-<section class="HomeFirstSection" style="background-color: #192664;">
+<section class="HomeFirstSection" style="background-color: #1d57d4;">
     <div class="serceles hidden">
         <div class="cercle1">
             <div class="cercle2"></div>
@@ -98,7 +98,7 @@
                 <h2>Genius Center Prive</h2>
             </div>
             <p>façonnons votre expertise pour relever les défis logistiques du futur avec confiance et succès.</p>
-            <button style=" background-color: #d5d5d5">NOS CLASSES</button>
+            <button style=" background-color: #d5d5d5" class="GcpButton">NOS CLASSES</button>
         </div>
     </div>
 <!-- share bar social on first section -->
