--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 </header>
 
 <!-- section Home 1 -->
-<section class="HomeFirstSection" style="background-color: #1d57d4;">
+<section class="HomeFirstSection" style="background-color: #00bdff;">
     <div class="serceles hidden">
         <div class="cercle1">
             <div class="cercle2"></div>
@@ -157,6 +157,33 @@
         <div alt="3" class="item item3" style="background-color: rgb(98, 64, 32);"></div>
         <div alt="4" class="item item4" style="background-color: rgb(255, 195, 127);"></div>
         <div  alt="5" class="item item5" style="background-color: rgb(127, 138, 255);"></div>
+    </div>
+</div>
+
+<!-- location section -->
+<div class="mapsvlleSection">
+    <h2>Notre Localisation</h2>
+    <div class="buttonVilles">
+        <button>ville 1</button>
+        <button>ville 2</button>
+        <button>ville 2</button>
+        <button>ville 3</button>
+        <button>ville 4</button>
+        <button>ville 5</button>
+    </div>
+    <div class="locationEtVilleInfo">
+        <div class="Localistionchoisi">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3237.648580095802!2d-5.804705124208786!3d35.75944137256216!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMzXCsDQ1JzM0LjAiTiA1wrA0OCcwNy43Ilc!5e0!3m2!1sfr!2sma!4v1705022946045!5m2!1sfr!2sma" width="600" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <div class="warningAndlocalinfo">
+            <div class="titleLocal">
+                <h3>ville</h3>
+                <p>adresse : Lorem ipsum dolor sit.</p>
+            </div>
+            <div class="warning">
+                <p style="color: red;">! Lorem ipsum dolor sit.</p>
+            </div>
+        </div>
     </div>
 </div>
 
