--- a/index.html
+++ b/index.html
@@ -167,11 +167,12 @@
             <button id="CASABlANCA"  adressNom="Al firdaous imm 2 2ème étage n 14 ain sbaa- bernoussi casablanca"    class="Mapsbutton"    data-map-url="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d6660.073313634736!2d-7.649244586883114!3d33.422288657303504!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sfr!2sma!4v1707762213468!5m2!1sfr!2sma" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">CasaBlanca</button>
             <button id="TANGER"      adressNom=""   class="Mapsbutton" >TANGER</button>
             <button id="FES"         adressNom="Al-Atlas, rue Al-Zarqtouni, bâtiment n° 19, bureau n° 2"   class="Mapsbutton" >FES</button>
-            <button id="MEKNAS"      adressNom="gha casa"   class="Mapsbutton" >MEKNAS</button>
-            <button id="MOHAMMEDIA"  adressNom="gha casa"   class="Mapsbutton" >MOHAMMEDIA</button>
-            <button id="AL JADIDA"   adressNom="gha casa"   class="Mapsbutton" >AL JADIDA</button>
-            <button id="MARRAKECH"   adressNom="gha casa"   class="Mapsbutton" >MARRAKECH</button>
+            <button id="MEKNAS"      adressNom="AV ALLAL BEN ABDELLAH ESPACE AL MOUSTAKBAL MEKNES"   class="Mapsbutton" >MEKNAS</button>
+            <button id="MOHAMMEDIA"  adressNom="AL WAHDA AL ALIA RISIDENCE JAMILA 2 EME ETAGE"   class="Mapsbutton" >MOHAMMEDIA</button>
+            <button id="AL JADIDA"   adressNom="PLACE EL HANSALI CENTRE VILLE EL JADIDA RISIDENCE IBN ZAROUAL 3 EME ETAGE N 53"   class="Mapsbutton" >AL JADIDA</button>
+            <button id="MARRAKECH"   adressNom="HAY MOHAMMADI DAOUDIAT RESIDENCE THOURIYA 3 EME ETAGE N 9"   class="Mapsbutton" >MARRAKECH</button>
             <button id="AGADIR"      adressNom="Quartier Al-Salam, rue Anzi, à proximité de la résidence universitaire, à côté du restaurant Timitar"     class="Mapsbutton" >AGADIR</button>
+            <button id="BERCHID"      adressNom="Quartier Al-Salam, rue Anzi, à proximité de la résidence universitaire, à côté du restaurant Timitar"     class="Mapsbutton" >BERCHID</button>
         </div>
         <div class="locationEtVilleInfo">
             <div class="Localistionchoisi">
@@ -181,6 +182,7 @@
                     <h3  class="villeNomMaps" >ville</h3>
                     <p  class="adressMaps" >adresse : Lorem ipsum dolor sit.</p>
             </div>
+            <i class="fa-solid fa-city" style="width: 100px;"></i>
         </div>
 </section>
 
@@ -208,82 +210,7 @@
     </div>    
 </section>
 <style>
-    .mapsvlleSection {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        text-align: center;
-        padding: 20px;
-        background-color: #f8f8f8; /* Set your desired background color */
-        border-radius: 10px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Add a subtle shadow */
-        height: 70vh;
-        border: 1px solid;
-        font-size: 1.2rem;
-    }
-    .mapsvlleSection h2 {
-        border-bottom: #333 2px solid;
-    }
-    .buttonVilles button {
-        margin: 5px;
-        padding: 15px 25px;
-        background-color: #3498db; /* Set your desired button background color */
-        color: #fff; /* Set text color */
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        font-size: 1rem;
-        transition: .5s;
-    }
-    .buttonVilles button:hover {
-        background-color: #e5690a;
-        transform: scale(1.1);
-    }
-    .locationEtVilleInfo {
-        display: flex;
-        flex-direction: row-reverse;
-        align-items: center;
-        justify-content: space-between;
-        border: 1px solid;
-        width:80vw;
-        margin-top: 20px;
-        height: 60%;
-        padding: 1rem;
-        height: 100%;
-        background-color: #ebe7ea;
-    }
 
-    .Localistionchoisi {
-        height: 85%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .Localistionchoisi iframe {
-        border: 2px solid #3498db; /* Match button color for consistency */
-        border-radius: 5px;
-        height: 100%;
-        border-top-left-radius: 10px;
-        border-bottom-right-radius: 10px;
-    }
-
-    .warningAndlocalinfo {
-        display: flex;
-        flex-direction: column;
-        align-items: self-start;
-        padding-left: 1rem;
-        justify-content: start;
-        height: 100%;
-        width: 100%;
-    }
-
-    .warningAndlocalinfo h3 {
-        font-size: 2.1rem;
-        margin-bottom: -5px;
-        color: #333; /* Set your desired text color */
-    }
 
 </style>
 
