--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <div class="Localistionchoisi">
                 <iframe class="framMaps" src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3237.648580095802!2d-5.804705124208786!3d35.75944137256216!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMzXCsDQ1JzM0LjAiTiA1wrA0OCcwNy43Ilc!5e0!3m2!1sfr!2sma!4v1705022946045!5m2!1sfr!2sma" width="600" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
-            <div class="warningAndlocalinfo">
+            <div class="warningAndlocalinfo" id="warningAndlocalinfo">
                     <h3  class="villeNomMaps" >ville</h3>
                     <p  class="adressMaps" >adresse : Lorem ipsum dolor sit.</p>
             </div>
