--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
     <div id="Menu">
         <div class="Menu-all">
              <div class="imgAndRmv">
-                 <img class="imgLogoPort" src="logon.png" alt="Your Logo">
+                 <img class="imgLogoPort" src="GC CHARIOT 96-64-06.png" alt="Your Logo">
                  <i class="fa-solid fa-xmark" id="ClosePortfl" onclick="ClosePortfli()"></i>
              </div>
              <div class="AbotAnddivL">
-                 <h3>About Us</h3>
+                 <h3>Qui sommes-nous</h3>
                  <p style="font-size: 1rem;">Notre société est un leader en formation logistique, offrant des programmes personnalisés pour optimiser les opérations supply chain. Nous allions expertise sectorielle et pédagogie innovante pour développer les compétences nécessaires à une gestion logistique efficace et performante</p>
              </div>
              <div class="AbotAnddivLImags">
-                 <h3>Gelary</h3>
+                 <h3>Notre galerie d’espaces de travail</h3>
                  <div class="imgGrid">
                     <img src="image Grid Hed.jpg" alt="">
                     <img src="image Grid Hed.jpg" alt="">
@@ -37,15 +37,16 @@
              </div>
              <div class="AbotAnddivLInfos">
                 <h3>Information</h3>
-                <p style="font-size: 1rem;"><i class="fa-solid fa-location-dot"></i>Drissia Av Tariq Ibn Ziaden , Tanger</p>
+                <p style="font-size: 1rem;"><i class="fa-solid fa-location-dot"></i>AV DRISSIA EN FACE DU CENTRE COMMERCIAL AL BOUHOUT</p>
                 <p style="font-size: 1rem;"><i class="fa-solid fa-phone"></i>08 08 6435 73</p>
                 <p style="font-size: 1rem;"><i class="fa-solid fa-envelope"></i>geniuscenter@gmail.com</p>
             </div>
             <div class="AbotAnddivLInfos social">
-                <h3>Follow Us</h3>
+                <h3>Suivez-nous</h3>
                 <i class="fa-brands fa-square-instagram" style="cursor: pointer;"></i>
                 <i class="fa-brands fa-facebook" style="cursor: pointer;"></i>
                 <i class="fa-brands fa-tiktok" style="cursor: pointer;"></i>
+                <i class="fa-brands fa-linkedin" style="cursor: pointer;"></i>
             </div>
         </div>
     </div> 
@@ -67,7 +68,7 @@
     </div> 
 <!-- header -->
 <header >
-    <img src="nvlogoblanc.png" alt="Your Logo">
+    <img src="GC CHARIOT 96-64-06.png" alt="Your Logo">
     <nav>
         <a href="#">Home</a>
         <a href="#">About</a>
@@ -80,7 +81,6 @@
             <i id="OpenMark" class="fa-solid fa-bars resbar"></i>
         </div>
         <i onclick="afficherPorf()" class="fa-regular fa-chart-bar"></i>
-        <!-- <i class="fa-solid fa-moon" style="color: #ffffff;"></i> -->
     </div>
 </header>
 
@@ -303,6 +303,7 @@
                 <i class="fa-brands fa-square-instagram" style="cursor: pointer;" ></i>
                 <i class="fa-brands fa-facebook" style="cursor: pointer;"></i>
                 <i class="fa-brands fa-tiktok" style="cursor: pointer;"></i>
+                <i class="fa-brands fa-linkedin" style="cursor: pointer;"></i>
             </div>
         </div>
 
