--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 <section class="mapsvlleSection">
     <h2>Notre Localisation</h2>
         <div class="buttonVilles"  onclick="chngMaps(event)">
-            <button id="CASABlANCA"  adressNom="Al firdaous imm 2 2ème étage n 14 ain sbaa- bernoussi casablanca"    class="Mapsbutton active"    data-map-url="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d6660.073313634736!2d-7.649244586883114!3d33.422288657303504!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sfr!2sma!4v1707762213468!5m2!1sfr!2sma" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">CasaBlanca</button>
+            <button id="CASABlANCA"  adressNom="Al firdaous imm 2 2ème étage n 14 ain sbaa- bernoussi casablanca"    class="Mapsbutton active"    data-map-url="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d6660.073313634736!2d-7.649244586883114!3d33.422288657303504!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sfr!2sma!4v1707762213468!5m2!1sfr!2sma"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">CasaBlanca</button>
             <button id="TANGER"      adressNom=""   class="Mapsbutton" >TANGER</button>
             <button id="FES"         adressNom="Al-Atlas, rue Al-Zarqtouni, bâtiment n° 19, bureau n° 2"   class="Mapsbutton" >FES</button>
             <button id="MEKNAS"      adressNom="AV ALLAL BEN ABDELLAH ESPACE AL MOUSTAKBAL MEKNES"   class="Mapsbutton" >MEKNAS</button>
@@ -176,7 +176,7 @@
         </div>
         <div class="locationEtVilleInfo">
             <div class="Localistionchoisi">
-                <iframe class="framMaps" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d6660.073313634736!2d-7.649244586883114!3d33.422288657303504!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sfr!2sma!4v1707762213468!5m2!1sfr!2sma" width="600" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe class="framMaps" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d6660.073313634736!2d-7.649244586883114!3d33.422288657303504!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sfr!2sma!4v1707762213468!5m2!1sfr!2sma"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="warningAndlocalinfo" id="warningAndlocalinfo">
                     <h3  class="villeNomMaps" >CASABlANCA</h3>
