--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             <button id="AGADIR"      adressNom="Quartier Al-Salam, rue Anzi, à proximité de la résidence universitaire, à côté du restaurant Timitar"     class="Mapsbutton" >AGADIR</button>
             <button id="BERCHID"      adressNom="Quartier Al-Salam, rue Anzi, à proximité de la résidence universitaire, à côté du restaurant Timitar"     class="Mapsbutton" >BERCHID</button>
         </div>
-        <div class="locationEtVilleInfo">
+        <div class="locationEtVilleInfo" style="border: none;">
             <div class="Localistionchoisi">
                 <iframe class="framMaps" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d6660.073313634736!2d-7.649244586883114!3d33.422288657303504!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sfr!2sma!4v1707762213468!5m2!1sfr!2sma"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
