--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div class="GCP hidden">
             <div class="GCP-Title">
                 <img src="titlebg.13d788348b56c629eefb2e7ad1f4d6ce.svg" alt="">
-                <h2>Genius Center Prive hamid</h2>
+                <h2>Genius Center Prive</h2>
             </div>
             <p>façonnons votre expertise pour relever les défis logistiques du futur avec confiance et succès.</p>
             <button style=" background-color: #d5d5d5" class="GcpButton">NOS CLASSES</button>
