--- a/index.html
+++ b/index.html
@@ -28,18 +28,18 @@
                  <h3>Notre galerie d’espaces de travail</h3>
                  <div class="imgGrid">
                     <img src="image Grid Hed.jpg" alt="">
-                    <img src="image Grid Hed.jpg" alt="">
-                    <img src="image Grid Hed.jpg" alt="">
-                    <img src="image Grid Hed.jpg" alt="">
-                    <img src="image Grid Hed.jpg" alt="">
-                    <img src="image Grid Hed.jpg" alt="">
+                    <img src="prtfl11.jpg" alt="">
+                    <img src="ForkliftContainerBig1.jpg     " alt="">
+                    <img src="kalmar-ecoreachstacker-scaled.jpg" alt="">
+                    <img src="Picture-1.png" alt="">
+                    <img src="mht790_021.jpg" alt="">
                  </div>
              </div>
              <div class="AbotAnddivLInfos">
                 <h3>Information</h3>
                 <p style="font-size: 1rem;"><i class="fa-solid fa-location-dot"></i>AV DRISSIA EN FACE DU CENTRE COMMERCIAL AL BOUHOUT</p>
                 <p style="font-size: 1rem;"><i class="fa-solid fa-phone"></i>08 08 6435 73</p>
-                <p style="font-size: 1rem;"><i class="fa-solid fa-envelope"></i>geniuscenter@gmail.com</p>
+                <p style="font-size: 1rem;"><i class="fa-solid fa-envelope"></i>contact@geniuscenterprive.com</p>
             </div>
             <div class="AbotAnddivLInfos social">
                 <h3>Suivez-nous</h3>
@@ -152,11 +152,11 @@
         <p>Notre Workplace Gallery présente des bureaux modernes, une collaboration en équipe et une culture amusante.</p>
     </div>
     <div class="galerie">
-        <div alt="1" class="item item1" style="background-color: rgb(16, 202, 140);"></div>
-        <div  alt="2" class="item item2" style="background-color: aquamarine;"></div>
-        <div alt="3" class="item item3" style="background-color: rgb(98, 64, 32);"></div>
-        <div alt="4" class="item item4" style="background-color: rgb(255, 195, 127);"></div>
-        <div  alt="5" class="item item5" style="background-color: rgb(127, 138, 255);"></div>
+        <div alt="1" class="item item1"></div>
+        <div  alt="2" class="item item2"></div>
+        <div alt="3" class="item item3"></div>
+        <div alt="4" class="item item4"></div>
+        <div  alt="5" class="item item5"></div>
     </div>
 </div>
 
@@ -254,29 +254,6 @@
     </div>
 </section>
 
-<section class="MapsSection hidden">
-    <div>
-        <h2 style="color: #192664;"><i class="fa-solid fa-location-dot"></i>Nous sommes situés dans</h2>
-    </div>
-    <div class="maps">
-        <div>
-            <h5>Tangier Drissia Av tariq beno zaid
-                <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3237.648580095802!2d-5.804705124208786!3d35.75944137256216!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMzXCsDQ1JzM0LjAiTiA1wrA0OCcwNy43Ilc!5e0!3m2!1sfr!2sma!4v1705022946045!5m2!1sfr!2sma" width="600" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </h5>
-        </div>
-
-        <div>  
-            <h5>Boghlien Av
-                <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3237.648580095802!2d-5.804705124208786!3d35.75944137256216!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMzXCsDQ1JzM0LjAiTiA1wrA0OCcwNy43Ilc!5e0!3m2!1sfr!2sma!4v1705022946045!5m2!1sfr!2sma" width="600" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </h5>
-        </div>
-    </div>
-    <div>
-        <p><i class="fa-solid fa-location-dot"></i>Tangier - CasaBlanca - Fes - Agadir - Marakech -Tetouan - Azilal </p>
-    </div>
-</section>
-
-
 <!-- have a question div -->
 <section class="havequesitonsection hidden" id="contactSec">
     <div class="layer">
@@ -305,6 +282,7 @@
                 <i class="fa-brands fa-tiktok" style="cursor: pointer;"></i>
                 <i class="fa-brands fa-linkedin" style="cursor: pointer;"></i>
             </div>
+            <p style="font-size: 1rem;">contact@geniuscenterprive.com</p>
         </div>
 
         <div class="smallContent">
