--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="Menu">
         <div class="Menu-all">
              <div class="imgAndRmv">
-                 <img class="imgLogoPort" src="assets/CHARIOT 96-64-06.png" alt="Your Logo">
+                 <img class="imgLogoPort" src="./assets/GCCHARIOT.png" alt="Your Logo">
                  <i class="fa-solid fa-xmark" id="ClosePortfl" onclick="ClosePortfli()"></i>
              </div>
              <div class="AbotAnddivL">
@@ -27,12 +27,12 @@
              <div class="AbotAnddivLImags">
                  <h3>Notre galerie d’espaces de travail</h3>
                  <div class="imgGrid">
-                    <img src="image Grid Hed.jpg" alt="">
-                    <img src="prtfl11.jpg" alt="">
-                    <img src="ForkliftContainerBig1.jpg     " alt="">
-                    <img src="kalmar-ecoreachstacker-scaled.jpg" alt="">
-                    <img src="Picture-1.png" alt="">
-                    <img src="mht790_021.jpg" alt="">
+                    <img src="./assets/imageGridHed.jpg" alt="">
+                    <img src="./assets/prtfl11.jpg" alt="">
+                    <img src="./assets/ForkliftContainerBig1.jpg     " alt="">
+                    <img src="./assets/kalmar-ecoreachstacker-scaled.jpg" alt="">
+                    <img src="./assets/Picture-1.png" alt="">
+                    <img src="./assets/mht790_021.jpg" alt="">
                  </div>
              </div>
              <div class="AbotAnddivLInfos">
@@ -53,7 +53,7 @@
     <div id="Menu2">
         <div class="Menu-all">
              <div class="imgAndRmv">
-                 <img class="imgLogoPort" src="assets/logon.png" alt="Your Logo">
+                 <img class="imgLogoPort" src="./assets/logon.png" alt="Your Logo">
                  <i class="fa-solid fa-xmark" id="ClosePortfl2"></i>
              </div>
              <ul>
@@ -68,7 +68,7 @@
     </div> 
 <!-- header -->
 <header >
-    <img src="assets/GC CHARIOT 96-64-06.png" alt="Your Logo">
+    <img src="./assets/GCCHARIOT.png" alt="Your Logo">
     <nav>
         <a href="#">Home</a>
         <a href="#">About</a>
@@ -94,7 +94,7 @@
     <div class="writFirstDiv">
         <div class="GCP hidden">
             <div class="GCP-Title">
-                <img src="assets/titlebg.13d788348b56c629eefb2e7ad1f4d6ce.svg" alt="">
+                <img src="./assets/titlebg.13d788348b56c629eefb2e7ad1f4d6ce.svg" alt="">
                 <h2>Genius Center Prive</h2>
             </div>
             <p>façonnons votre expertise pour relever les défis logistiques du futur avec confiance et succès.</p>
@@ -145,7 +145,7 @@
     <i class="fa-regular fa-images"></i>
     <div class="divTipgallery">
         <div class="titlegalry galry">
-            <img src="assets/SPLASH-01.png" alt="">
+            <img src="./assets/SPLASH-01.png" alt="">
             <h2 style="color: aliceblue;">Galerie GALERIE</h2>
         </div>
         <h1>Notre Galerie De Travail</h1>
@@ -190,7 +190,7 @@
 <section class="reviewsSec hidden">
     <i class="fa-regular fa-star iOfreview"></i>
     <div class="titlegalry">
-        <img src="assets/SPLASH-01.png" alt="">
+        <img src="./assets/SPLASH-01.png" alt="">
         <h2 style="color: aliceblue;">TÉMOIGNAGES</h2>
     </div>
     <div class="containerReview">
@@ -199,7 +199,7 @@
                     <!-- <img src="femmecasiste.webp" alt=""> -->
             </div>    
             <div class="ReviewInfo">
-                    <img src="assets/iOfreview.png" alt="">
+                    <img src="./assets/iOfreview.png" alt="">
                     <p style="font-style: italic;">"La formation logistique a dépassé toutes mes attentes ! Les instructeurs étaient extrêmement compétents et engageants. J'ai acquis des compétences précieuses qui ont déjà eu un impact positif sur ma carrière. Je recommande vivement cette formation à tous ceux qui souhaitent exceller dans le domaine de la logistique , Merci le groupe GCP ."</p>
                     <h3>MR Ahmed Sami - CasaBlanca</h3>
                     <p>Client</p>
@@ -217,12 +217,12 @@
 <!-- section3 Articels-->
 <section class="sectionArticles hidden">
     <div class="titlegalry articl">
-        <img src="assets/SPLASH-01.png" alt="">
+        <img src="./assets/SPLASH-01.png" alt="">
         <h2 style="color: aliceblue">Articles</h2>
     </div>
     <div class="articles">
         <div class="article">
-            <img src="assets/femmecasiste.webp" alt="image 1">
+            <img src="./assets/femmecasiste.webp" alt="image 1">
             <div class="articledatediscription">
                 <div class="dateAndtitlearticl">
                     <h3>Progressez avec nos formations en ligne</h3>
@@ -232,7 +232,7 @@
             </div>
         </div>
         <div class="article">
-            <img src="assets/caces engin chantier.jpg" alt="image 1">
+            <img src="./assets/cacesenginchantier.jpg" alt="image 1">
             <div class="articledatediscription">
                 <div class="dateAndtitlearticl">
                     <h3>LA CONDUITE D'UN ENGIN DE CHANTIER</h3>
@@ -242,7 +242,7 @@
             </div>
         </div>
         <div class="article">
-            <img src="assets/tendances-logistique-2022.jpg" alt="image 1">
+            <img src="./assets/tendances-logistique-2022.jpg" alt="image 1">
             <div class="articledatediscription">
                 <div class="dateAndtitlearticl">
                     <h3>La Logistique 4.0 : Un Aperçu des Nouvelles Frontières de l'Industrie</h3>
@@ -268,7 +268,7 @@
 <footer>
     <div class="Contentfooter hidden">
         <div class="smallContent">
-            <img src="assets/logon.png">
+            <img src="./assets/logon.png">
             <p>"Les CACES sont les ailes qui élèvent la logistique, nous permettant de voler au-dessus des obstacles pour atteindre nos objectifs avec agilité."</p>
             <p id="yearFoot"></p>
         </div>
